--- a/home.html
+++ b/home.html
@@ -182,10 +182,11 @@
                                 <div class="thumb">
                                     <figure class="image">
                                         <div class="overlay"></div>
-                                        <img src="./images/mixartist.jpg" alt="anh ca si">
+                                        <img id="singer-thumb" src="./images/mixartist.jpg" alt="anh ca si">
                                         <div class="icon-position">
-                                            <button class="btn btn-circle-lay">
+                                            <button class="btn btn-circle-lay btn-circle-play">
                                                 <i class="fa-solid fa-play icon-white"></i>
+                                                <div id="icon-playing"></div>
                                             </button>
                                         </div>
                                     </figure>
@@ -246,8 +247,8 @@
                             <div class="thumbnail">
                                 <div class="card-image">
                                     <div class="thumb">
-                                        <figure class="image">
-                                            <img src="./images/mixartist.jpg" alt="anh ca si">
+                                        <figure class="image1">
+                                            <img height="220" src="./images/mixartist.jpg" alt="anh ca si">
                                             <div class="icon-position">
                                                 <button class="btn btn-circle-lay">
                                                     <i class="fa-solid fa-repeat icon-white"></i>
@@ -275,8 +276,8 @@
                             <div class="thumbnail">
                                 <div class="card-image">
                                     <div class="thumb">
-                                        <figure class="image">
-                                            <img src="./images/img3.webp" alt="anh ca si">
+                                        <figure class="image1">
+                                            <img height="220" src="./images/img3.webp" alt="anh ca si">
                                             <div class="icon-position">
                                                 <button class="btn btn-circle-lay">
                                                     <i class="fa-solid fa-repeat icon-white"></i>
@@ -304,8 +305,8 @@
                             <div class="thumbnail">
                                 <div class="card-image">
                                     <div class="thumb">
-                                        <figure class="image">
-                                            <img src="./images/img2.webp" alt="anh ca si">
+                                        <figure class="image1">
+                                            <img height="220" src="./images/img2.webp" alt="anh ca si">
                                             <div class="icon-position">
                                                 <button class="btn btn-circle-lay">
                                                     <i class="fa-solid fa-repeat icon-white"></i>
@@ -333,8 +334,8 @@
                             <div class="thumbnail">
                                 <div class="card-image">
                                     <div class="thumb">
-                                        <figure class="image">
-                                            <img src="./images/img1.webp" alt="anh ca si">
+                                        <figure class="image1">
+                                            <img height="220" src="./images/img1.webp" alt="anh ca si">
                                             <div class="icon-position">
                                                 <button class="btn btn-circle-lay">
                                                     <i class="fa-solid fa-repeat icon-white"></i>
