--- a/home.html
+++ b/home.html
@@ -242,124 +242,7 @@
                 </div>
                 <div class="channel-section">
                     <h3>Nghệ Sĩ Tham Gia</h3>
-                    <div class="carousel-wrap">
-                        <div class="carousel-item">
-                            <div class="thumbnail">
-                                <div class="card-image">
-                                    <div class="thumb">
-                                        <figure class="image1">
-                                            <img height="220" src="./images/mixartist.jpg" alt="anh ca si">
-                                            <div class="icon-position">
-                                                <button class="btn btn-circle-lay">
-                                                    <i class="fa-solid fa-repeat icon-white"></i>
-                                                </button>
-                                            </div>
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-content">
-                                <div class="artists">
-                                    <div class="name-singer">
-                                        <span>Hòa Minzy</span>
-                                        <i class="fa-solid fa-star icon-star icon-grey"></i>
-                                    </div>
-                                    <span class="like">241K quan tâm</span>
-                                    <button class="btn-play">
-                                        <i class="fa-solid fa-user-plus"></i>
-                                        <span>Quan tâm</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="thumbnail">
-                                <div class="card-image">
-                                    <div class="thumb">
-                                        <figure class="image1">
-                                            <img height="220" src="./images/img3.webp" alt="anh ca si">
-                                            <div class="icon-position">
-                                                <button class="btn btn-circle-lay">
-                                                    <i class="fa-solid fa-repeat icon-white"></i>
-                                                </button>
-                                            </div>
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-content">
-                                <div class="artists">
-                                    <div class="name-singer">
-                                        <span>Mr. Siro</span>
-                                        <i class="fa-solid fa-star icon-star icon-grey"></i>
-                                    </div>
-                                    <span class="like">792K quan tâm</span>
-                                    <button class="btn-play">
-                                        <i class="fa-solid fa-user-plus"></i>
-                                        <span>Quan tâm</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="thumbnail">
-                                <div class="card-image">
-                                    <div class="thumb">
-                                        <figure class="image1">
-                                            <img height="220" src="./images/img2.webp" alt="anh ca si">
-                                            <div class="icon-position">
-                                                <button class="btn btn-circle-lay">
-                                                    <i class="fa-solid fa-repeat icon-white"></i>
-                                                </button>
-                                            </div>
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-content">
-                                <div class="artists">
-                                    <div class="name-singer">
-                                        <span>XHTĐRLX</span>
-                                        <i class="fa-solid fa-star icon-star icon-grey"></i>
-                                    </div>
-                                    <span class="like">28K quan tâm</span>
-                                    <button class="btn-play">
-                                        <i class="fa-solid fa-user-plus"></i>
-                                        <span>Quan tâm</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="thumbnail">
-                                <div class="card-image">
-                                    <div class="thumb">
-                                        <figure class="image1">
-                                            <img height="220" src="./images/img1.webp" alt="anh ca si">
-                                            <div class="icon-position">
-                                                <button class="btn btn-circle-lay">
-                                                    <i class="fa-solid fa-repeat icon-white"></i>
-                                                </button>
-                                            </div>
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-content">
-                                <div class="artists">
-                                    <div class="name-singer">
-                                        <span>Forest Studio</span>
-                                        <i class="fa-solid fa-star icon-star icon-grey"></i>
-                                    </div>
-                                    <span class="like">333 quan tâm</span>
-                                    <button class="btn-play">
-                                        <i class="fa-solid fa-user-plus"></i>
-                                        <span>Quan tâm</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="carousel-wrap carousel-list"></div>
                 </div>
                 <div class="channel-section">
                     <h3>Có Thể Bạn Quan Tâm</h3>
