code animation thumb

--- a/home.html
+++ b/home.html
@@ -213,7 +213,7 @@
                                 </button>
                                 <div class="level">
                                     <div class="level-item">
-                                        <button class="btn btn-icon">
+                                        <button class="btn btn-icon btn-heart">
                                             <i class="fa-solid fa-heart icon-grey"></i>
                                         </button>
                                     </div>
