change icon left and right

--- a/home.html
+++ b/home.html
@@ -128,11 +128,11 @@
             <div class="header">
                 <div class="level">
                     <div class="level-left">
-                        <button class="btn disabled">
-                            <i class="fa-solid fa-house icon-grey"></i>
+                        <button class="btn">
+                            <i class="fas fa-long-arrow-left icon-grey"></i>
                         </button>
-                        <button class="btn disabled">
-                            <i class="fa-solid fa-user icon-grey"></i>
+                        <button class="btn">
+                            <i class="fas fa-long-arrow-right icon-grey"></i>
                         </button>
                         <form class="search">
                             <div class="search-container is-collapse">
