--- a/home.html
+++ b/home.html
@@ -120,9 +120,7 @@
                     <div class="thumb-vertical"></div>
                 </div>
             </div>
-            <div class="add-playList">
-
-            </div>
+            <div class="add-playList"></div>
         </aside>
         <div class="main-content">
             <div class="header">
