--- a/khampha.html
+++ b/khampha.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://static-zmp3.zmdcdn.me/skins/zmp3-v5.2/images/icon_zing_mp3_60.png">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <meta property="og:description" content="Dịch vụ nhạc số với hàng triệu bài hát và MV có bản quyền chất lượng cao, giúp bạn nghe nhạc, tải nhạc, upload và đồng bộ kho nhạc của tôi trên nhiều thiết bị.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-9/css/all.min.css" integrity="sha512-X8jR8oYnEmXhGB43u+qxt0mQezR37NUxHhtukvD4bzeWDthOz0mvNOYOzPCMZ7VB0mG607nrkd+kakmSmbffyQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./home.css">
     <link rel="stylesheet" href="./khampha.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Zing MP3 | Nghe tải nhạc chất lượng cao trên desktop, mobile và TV</title>
 </head>
 <body>
@@ -174,173 +175,59 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="main-page">
+
+            <div class="owl-carousel owl-theme">
+                <div class="item"><h4>1</h4></div>
+                <div class="item"><h4>2</h4></div>
+                <div class="item"><h4>3</h4></div>
+                <div class="item"><h4>4</h4></div>
+                <div class="item"><h4>5</h4></div>
+                <div class="item"><h4>6</h4></div>
+                <div class="item"><h4>7</h4></div>
+                <div class="item"><h4>8</h4></div>
+                <div class="item"><h4>9</h4></div>
+                <div class="item"><h4>10</h4></div>
+                <div class="item"><h4>11</h4></div>
+                <div class="item"><h4>12</h4></div>
+            </div>
+            <div class="main-page">
                 <div style="position: relative; overflow: hidden; width: 100%; height: 100%;">
                     <div class="zm-section">
                         <div class="container">
                             <div class="container">
-                                <div class="gallery swiper mySwiper">
-                                    <div class="gallery-container swiper-wrapper">
-                                        <div class=" swiper-slide">
-                                            <div class="gallery-item gallery-first">
-                                                <div class="zm-card">
-                                                    <a href="#">
-                                                        <div class="zm-card-image">
-                                                            <figure>
-                                                                <div class="slide slide1"></div>
-                                                            </figure>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="gallery-item gallery-previous">
-                                                <div class="zm-card">
-                                                    <a href="#">
-                                                        <div class="zm-card-image">
-                                                            <figure>
-                                                                <div class="slide slide2"></div>
-                                                            </figure>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="gallery-item gallery-selected">
-                                                <div class="zm-card">
-                                                    <a href="#">
-                                                        <div class="zm-card-image">
-                                                            <figure>
-                                                                <div class="slide slide4"></div>
-                                                            </figure>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="gallery-item gallery-next">
-                                                <div class="zm-card">
-                                                    <a href="#">
-                                                        <div class="zm-card-image">
-                                                            <figure>
-                                                                <div class="slide slide5"></div>
-                                                            </figure>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="gallery-item gallery-last">
-                                                <div class="zm-card">
-                                                    <a href="#">
-                                                        <div class="zm-card-image">
-                                                            <figure>
-                                                                <div class="slide slide6"></div>
-                                                            </figure>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="gallery-item gallery-add">
-                                                <div class="zm-card">
-                                                    <a href="#">
-                                                        <div class="zm-card-image">
-                                                            <figure>
-                                                                <div class="slide slide3"></div>
-                                                            </figure>
-                                                        </div>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="gallery">
-                                    <div class="gallery-container">
-                                        <div class="zm-gallery-prev">
-                                            <button class="btn btn-prev">
-                                                <i class="icon-white fa-solid fa-arrow-left"></i>
-                                            </button>
+                                    <div class="owl-carousel owl-theme gallery-container">
+                                        <div class="gallery-item">
+                                            <div class="slide slide1"></div>
                                         </div>
-                                        <div class="gallery-item gallery-first">
-                                            <div class="zm-card">
-                                                <a href="#">
-                                                    <div class="zm-card-image">
-                                                        <figure>
-                                                            <div class="slide slide1"></div>
-                                                        </figure>
-                                                    </div>
-                                                </a>
-                                            </div>
+                                        <div class="gallery-item">
+                                            <div class="slide slide2"></div>
                                         </div>
-                                        <div class="gallery-item gallery-previous">
-                                            <div class="zm-card">
-                                                <a href="#">
-                                                    <div class="zm-card-image">
-                                                        <figure>
-                                                            <div class="slide slide2"></div>
-                                                        </figure>
-                                                    </div>
-                                                </a>
-                                            </div>
+                                        <div class="gallery-item">
+                                            <div class="slide slide3"></div>
                                         </div>
-                                        <div class="gallery-item gallery-selected">
-                                            <div class="zm-card">
-                                                <a href="#">
-                                                    <div class="zm-card-image">
-                                                        <figure>
-                                                            <div class="slide slide4"></div>
-                                                        </figure>
-                                                    </div>
-                                                </a>
-                                            </div>
+                                        <div class="gallery-item">
+                                            <div class="slide slide4"></div>
                                         </div>
-                                        <div class="gallery-item gallery-next">
-                                            <div class="zm-card">
-                                                <a href="#">
-                                                    <div class="zm-card-image">
-                                                        <figure>
-                                                            <div class="slide slide5"></div>
-                                                        </figure>
-                                                    </div>
-                                                </a>
-                                            </div>
+                                        <div class="gallery-item">
+                                            <div class="slide slide5"></div>
                                         </div>
-                                        <div class="gallery-item gallery-last">
-                                            <div class="zm-card">
-                                                <a href="#">
-                                                    <div class="zm-card-image">
-                                                        <figure>
-                                                            <div class="slide slide6"></div>
-                                                        </figure>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="gallery-item gallery-add">
-                                            <div class="zm-card">
-                                                <a href="#">
-                                                    <div class="zm-card-image">
-                                                        <figure>
-                                                            <div class="slide slide3"></div>
-                                                        </figure>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="zm-gallery-last">
-                                            <button class="btn btn-next">
-                                                <i class="icon-white fa-solid fa-right"></i>
-                                            </button>
+                                        <div class="gallery-item">
+                                            <div class="slide slide6"></div>
                                         </div>
                                     </div>
                                 </div>
-                                
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </body>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="./khampha.js"></script>
 <script src="https://kit.fontawesome.com/496e209a59.js" crossorigin="anonymous"></script>
 </html>
