chuyen trang router khampha

--- a/home.html
+++ b/home.html
@@ -448,7 +448,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/music-song/khampha.html" class="menu-item">
+                        <a href="/khampha.html" class="menu-item">
                             <i class="fa-solid fa-house icon icon-pro"></i>
                             <span class="icon-pro">Khám Phá</span>
                         </a>
