--- a/khampha.html
+++ b/khampha.html
@@ -217,7 +217,7 @@
                             <div class="channel-image">
                                 <div class="channel-img-item">
                                     <div class="thumb">
-                                        <a href="#">
+                                        <a href="./karik.html">
                                             <img src="./images/channel1.webp" alt="channel">
                                         </a>
                                         <div class="overlay"></div>
@@ -234,7 +234,7 @@
                                         </div>
                                     </div>
                                     <div class="content">
-                                        <a href="#">Rap Việt Cực Chất</a>
+                                        <a href="./karik.html">Rap Việt Cực Chất</a>
                                     </div>
                                 </div>
                                 <div class="channel-img-item">
