show notifycation when remove or add song

--- a/home.html
+++ b/home.html
@@ -790,7 +790,7 @@
                             <div class="media-right">
                                 <div class="level">
                                     <div class="level-item">
-                                        <button class="is-hover-circle">
+                                        <button id="hoverCircle" class="is-hover-circle">
                                             <i class="fa-solid fa-heart"></i>
                                         </button>
                                         <button class="is-hover-circle">
@@ -854,6 +854,18 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="notifycationAddSong">
+        <span class="notify-textAddSong"></span>
+        <button class="btn btn-close">
+            <i class="icon-white fa-solid fa-xmark"></i>
+        </button>
+    </div>
+    <div class="notifycationRemoveSong">
+        <span class="notify-textRemoveSong"></span>
+        <button class="btn btn-close">
+            <i class="icon-white fa-solid fa-xmark"></i>
+        </button>
     </div>
 </body>
 <script src="https://kit.fontawesome.com/496e209a59.js" crossorigin="anonymous"></script>
